btn、svg、頁數上的form、header、disable 修改

--- a/btn.htm
+++ b/btn.htm
@@ -287,115 +287,115 @@
 
                             <div class="btn_grp">
                                 <button class="btn btn-blue">
-                                    <i class="i_apple invert"></i>IOS
+                                    <i class="i_apple2"></i>IOS
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_arrow_left invert"></i>上一頁
+                                    <i class="i_arrow_left2"></i>上一頁
                                 </button>
                                 <button class="btn btn-blue">
-                                    下一頁  <i class="i_arrow_right invert"></i>
+                                    下一頁  <i class="i_arrow_right2"></i>
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_bookmark invert"></i>加入書籤
+                                    <i class="i_bookmark2"></i>加入書籤
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_chat invert"></i>訊息
+                                    <i class="i_chat2"></i>訊息
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_check invert"></i>確認
+                                    <i class="i_check2"></i>確認
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_clock invert"></i>時間
+                                    <i class="i_clock2"></i>時間
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_close invert"></i>關閉
+                                    <i class="i_close2"></i>關閉
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_edit invert"></i>編輯
+                                    <i class="i_edit2"></i>編輯
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_facebook invert"></i>facebook
+                                    <i class="i_facebook2"></i>facebook
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_grid invert"></i>清單
+                                    <i class="i_grid2"></i>清單
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_heart invert"></i>加入最愛
+                                    <i class="i_heart2"></i>加入最愛
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_home invert"></i>回首頁
+                                    <i class="i_home2"></i>回首頁
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_info invert"></i>說明
+                                    <i class="i_info2"></i>說明
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_link invert"></i>連結
+                                    <i class="i_link2"></i>連結
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_linkedin invert"></i>linkedin
+                                    <i class="i_linkedin2"></i>linkedin
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_lock invert"></i>鎖定
+                                    <i class="i_lock2"></i>鎖定
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_mail invert"></i>Mail
+                                    <i class="i_mail2"></i>Mail
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_rss invert"></i>RSS
+                                    <i class="i_rss2"></i>RSS
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_setting invert"></i>設定
+                                    <i class="i_setting2"></i>設定
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_star invert"></i>評比
+                                    <i class="i_star2"></i>評比
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_twitter invert"></i>twitter
+                                    <i class="i_twitter2"></i>twitter
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_video invert"></i>video
+                                    <i class="i_video2"></i>video
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_vimeo invert"></i>vimeo
+                                    <i class="i_vimeo2"></i>vimeo
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_youtube invert"></i>youtube
+                                    <i class="i_youtube2"></i>youtube
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_order invert"></i>下單
+                                    <i class="i_order2"></i>下單
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_move invert"></i>移動
+                                    <i class="i_move2"></i>移動
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_reflash invert"></i>重新整理
+                                    <i class="i_reflash2"></i>重新整理
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_play invert"></i>語音播放
+                                    <i class="i_play2"></i>語音播放
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_view invert"></i>檢視
+                                    <i class="i_view2"></i>檢視
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_add invert"></i>增加
+                                    <i class="i_add2"></i>增加
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_minus invert"></i>減少
+                                    <i class="i_minus2"></i>減少
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_search invert"></i>查詢
+                                    <i class="i_search2"></i>查詢
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_photo invert"></i>圖片
+                                    <i class="i_photo2"></i>圖片
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_man invert"></i>會員
+                                    <i class="i_man2"></i>會員
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_copy invert"></i>複製
+                                    <i class="i_copy2"></i>複製
                                 </button>
                                 <button class="btn btn-blue">
-                                    <i class="i_calendar invert"></i>日期
+                                    <i class="i_calendar2"></i>日期
                                 </button>
                             </div>
 
@@ -453,6 +453,15 @@
                                 <input type="button" class="btn btn-primary readonly" value="主要按鈕" readonly>
                                 <input type="button" class="btn btn-secondary readonly" value="次要按鈕" readonly>
                                 <input type="button" class="btn btn-normal readonly" value="一般按鈕" readonly>
+                            </div>
+
+
+                            <div class="btn_grp">
+                                <a class="btn btn-xl">特大按鈕</a>
+                                <a class="btn btn-lg">大按鈕</a>
+                                <a class="btn">按鈕</a>
+                                <a class="btn btn-sm">小按鈕</a>
+                                <a class="btn btn-xs">小小按鈕</a>
                             </div>
 
                         </form>
