--- a/lp_table_template.htm
+++ b/lp_table_template.htm
@@ -195,6 +195,44 @@
                     </div>
                     <!-- h2節點 -->
                     <h2 class="title">節點標題</h2>
+                    <!-- function_panel -->
+                    <div class="function_panel">
+                        <div class="publish_time">
+                            <span>發布日期：</span><time>2019-01-01</time>
+                        </div>
+                        <!-- 文字大小 -->
+                        <div class="font_size">
+                            <span>字型大小：</span>
+                            <!-- 英文用<span>font-size：</span> -->
+                            <ul>
+                                <li><a href="#" class="small">小</a></li>
+                                <li><a href="#" class="medium">中</a></li>
+                                <li><a href="#" class="large">大</a></li>
+                            </ul>
+                        </div>
+                        <!-- function功能區塊 -->
+                        <div class="function">
+                            <ul>
+                                <li class="back"><a href="javascript:history.back()">回上一頁</a></li>
+                                <li class="print"><a href="#">友善列印</a></li>
+                                <li class="forward"><a href="#">轉寄友人</a></li>
+                            </ul>
+                        </div>
+                        <!-- 社群分享 -->
+                        <div class="share">
+                            <ul>
+                                <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                     <!-- function功能區塊 -->
                     <div class="function">
                         <ul>
@@ -286,13 +324,15 @@
                     <!-- LP End -->
                     <!-- Pagination -->
                     <div class="pagination">
-                        <form action="" class="form_inline">
-                            <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
-                                <option value="">10</option>
-                                <option value="">20</option>
-                                <option value="">30</option>
-                                <option value="">40</option>
-                            </select> 筆， <input type="button" value="確定" class="btn btn-submit">
+                        <form action="">
+                            <div class="form_inline">
+                                <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
+                                    <option value="">10</option>
+                                    <option value="">20</option>
+                                    <option value="">30</option>
+                                    <option value="">40</option>
+                                </select> 筆， <input type="button" value="確定" class="btn btn-submit">
+                            </div>
                         </div>
                     </form>
                     <ul class="page">
