--- a/sitemap_template.htm
+++ b/sitemap_template.htm
@@ -168,6 +168,44 @@
                     </div>
                     <!-- h2節點 -->
                     <h2 class="title">網站導覽</h2>
+                    <!-- function_panel -->
+                    <div class="function_panel">
+                        <div class="publish_time">
+                            <span>發布日期：</span><time>2019-01-01</time>
+                        </div>
+                        <!-- 文字大小 -->
+                        <div class="font_size">
+                            <span>字型大小：</span>
+                            <!-- 英文用<span>font-size：</span> -->
+                            <ul>
+                                <li><a href="#" class="small">小</a></li>
+                                <li><a href="#" class="medium">中</a></li>
+                                <li><a href="#" class="large">大</a></li>
+                            </ul>
+                        </div>
+                        <!-- function功能區塊 -->
+                        <div class="function">
+                            <ul>
+                                <li class="back"><a href="javascript:history.back()">回上一頁</a></li>
+                                <li class="print"><a href="#">友善列印</a></li>
+                                <li class="forward"><a href="#">轉寄友人</a></li>
+                            </ul>
+                        </div>
+                        <!-- 社群分享 -->
+                        <div class="share">
+                            <ul>
+                                <li><a href="#"><img src="images/basic/icon_facebook.png" alt="facebook"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_twitter.png" alt="twitter"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_line.png" alt="line"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_youtube.png" alt="youtube"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_googleplus.png" alt="google plus"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_instagram.png" alt="instagram"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_linkedin.png" alt="LinkedIn"></a></li>
+                                <li><a href="#"><img src="images/basic/icon_rss.png" alt="RSS"></a></li>
+                            </ul>
+                        </div>
+                    </div>
+                    
                     <!-- SITEMAP Start -->
                     <section class="sitemap">
                         <p>如果您使用的瀏覽器是IE，快速鍵的使用方式是<kbd>Alt</kbd> 加上所定義的字母；如果您用Firefox 瀏覽網頁，快速鍵的使用方式是 <kbd>Alt</kbd> 加 <kbd>Shift </kbd>加上所定義的字母 ：，本網站的快速鍵﹝Accesskey﹞設定如下：</p>
