--- a/cp_photo_template.htm
+++ b/cp_photo_template.htm
@@ -359,149 +359,184 @@
                         <div class="file_download">
                             <h3>檔案下載</h3>
                             <ul>
-                                <li><span class="file-name">檔案名稱</span>
-                                    <span class="doc"><a href="xxxx.doc">doc</a></span>
-                                    <span class="docx"><a href="xxx.docx">docx</a></span>
-                                    <span class="odt"><a href="xxxx.odt">odt</a></span>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_doc"><a href="xxxx.doc">doc</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_docx"><a href="xxx.docx">docx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_odt"><a href="xxxx.odt">odt</a>823.8 KB，下載 1,489 次</span>
                                 </li>
-                                <li><span class="file-name">檔案名稱檔案名稱</span>
-                                    <span class="xls"><a href="xxxx.xls">xls</a></span>
-                                    <span class="xlsx"><a href="xxxx.xlsx">xlsx</a></span>
-                                    <span class="csv"><a href="xxxx.csv">csv</a></span>
-                                    <span class="ods"><a href="xxxx.ods">ods</a></span>
+                                <li><span class="file_name">檔案名稱檔案名稱</span>
+                                    <span class="file_xls"><a href="xxxx.xls">xls</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_xlsx"><a href="xxxx.xlsx">xlsx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_csv"><a href="xxxx.csv">csv</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_ods"><a href="xxxx.ods">ods</a>823.8 KB，下載 1,489 次</span>
                                 </li>
-                                <li><span class="file-name">檔案名稱</span>
-                                    <span class="ppt"><a href="xxxx.ppt">ppt</a></span>
-                                    <span class="pptx"><a href="xxxx.pptx">pptx</a></span>
-                                    <span class="odp"><a href="xxxx.odp">odp</a></span>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_ppt"><a href="xxxx.ppt">ppt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_pptx"><a href="xxxx.pptx">pptx</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_odp"><a href="xxxx.odp">odp</a>823.8 KB，下載 1,489 次</span>
                                 </li>
-                                <li><span class="file-name">檔案名稱</span>
-                                    <span class="pdf"><a href="xxxx.pdf">pdf</a></span>
-                                    <span class="zip"><a href="xxxx.zip">zip</a></span>
-                                    <span class="txt"><a href="xxxx.txt">txt</a></span>
-                                    <span class="mov"><a href="xxxx.mov">mov</a></span>
-                                    <span class="mp3"><a href="xxxx.mp3">mp3</a></span>
-                                    <span class="jpg"><a href="xxxx.jpg">jpg</a></span>
-                                    <span class="wmv"><a href="xxxx.wmv">wmv</a></span>
-                                    <span class="mp4"><a href="xxxx.mp4">mp4</a></span>
+                                <li><span class="file_name">檔案名稱</span>
+                                    <span class="file_pdf"><a href="xxxx.pdf">pdf</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_zip"><a href="xxxx.zip">zip</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_txt"><a href="xxxx.txt">txt</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mov"><a href="xxxx.mov">mov</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mp3"><a href="xxxx.mp3">mp3</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_jpg"><a href="xxxx.jpg">jpg</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_wmv"><a href="xxxx.wmv">wmv</a>823.8 KB，下載 1,489 次</span>
+                                    <span class="file_mp4"><a href="xxxx.mp4">mp4</a>823.8 KB，下載 1,489 次</span>
                                 </li>
                             </ul>
                         </div>
-                    </section>
-                    <!-- CP End -->
-                </div>
+                        <div class="file_download">
+                          <h3>檔案下載</h3>
+                          <ul>
+                            <li>
+                              <span class="file_name">檔案名稱</span>
+                              <span class="file"><a href="xxxx.doc" class="file_doc">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.doc" class="file_docx">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.doc" class="file_odt">檔案名稱.doc</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.other" class="file_other">檔案名稱.other</a>823.8 KB，下載 1,489 次</span>
+                          </li>
+                          <li>
+                              <span class="file_name">檔案名稱</span>
+                              <span class="file"><a href="xxxx.xls" class="file_xls">檔案名稱.xls</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.xlsx" class="file_xlsx">檔案名稱.xlsx</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.csv" class="file_csv">檔案名稱.csv</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.ods" class="file_ods">檔案名稱.ods</a>823.8 KB，下載 1,489 次</span>
+                          </li>
+                          <li>
+                              <span class="file_name">檔案名稱</span>
+                              <span class="file"><a href="xxxx.ppt" class="file_ppt">檔案名稱.ppt</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.pptx" class="file_pptx">檔案名稱.pptx</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.odp" class="file_odp">檔案名稱.odp</a>823.8 KB，下載 1,489 次</span>
+                          </li>
+                          <li>
+                              <span class="file_name">檔案名稱</span>
+                              <span class="file"><a href="xxxx.pdf" class="file_pdf">檔案名稱.pdf</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.zip" class="file_zip">檔案名稱.zip</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.txt" class="file_txt">檔案名稱.txt</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.mov" class="file_mov">檔案名稱.mov</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.mp3" class="file_mp3">檔案名稱.mp3</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.jpg" class="file_jpg">檔案名稱.jpg</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.mp4" class="file_mp4">檔案名稱.mp4</a>823.8 KB，下載 1,489 次</span>
+                              <span class="file"><a href="xxxx.wmv" class="file_wmv">檔案名稱.wmv</a>823.8 KB，下載 1,489 次</span>
+                          </li>
+                      </ul>
+                  </div>                    </section>
+                  <!-- CP End -->
+              </div>
+          </div>
+      </div>
+      <!-- fatfooter Start -->
+      <section class="fatfooter">
+        <div class="container">
+            <button type="button" name="收合" class="btn btn-fatfooter">收合</button>
+            <nav>
+                <ul>
+                    <li><a href="#">關於本局</a>
+                        <ul>
+                            <li><a href="#">本局沿革</a></li>
+                            <li><a href="#">本局願景</a></li>
+                            <li><a href="#">組織介紹</a></li>
+                            <li><a href="#">本局願景</a></li>
+                            <li><a href="#">局處執掌</a></li>
+                            <li><a href="#">重大政策</a></li>
+                            <li><a href="#">施政重點</a></li>
+                            <li><a href="#">本局位置</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">訊息公告</a>
+                        <ul>
+                            <li><a href="#">本局公告</a></li>
+                            <li><a href="#">環保署公告</a></li>
+                            <li><a href="#">環境用藥公告</a></li>
+                            <li><a href="#">環保專案成果報告</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">業務專區</a>
+                        <ul>
+                            <li><a href="#">化學物質</a></li>
+                            <li><a href="#">毒性化學物質</a></li>
+                            <li><a href="#">危害性化學物質災害防救</a></li>
+                            <li><a href="#">環境用藥</a></li>
+                            <li><a href="#">石綿危害資訊</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">便民服務</a>
+                        <ul>
+                            <li><a href="#">線上服務</a></li>
+                            <li><a href="#">教育宣導</a></li>
+                            <li><a href="#">影音專區</a></li>
+                            <li><a href="#">下載專區</a></li>
+                            <li><a href="#">常見問答</a></li>
+                            <li><a href="#">相關連結</a></li>
+                            <li><a href="#">訂閱電子報</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">政府資訊公開</a>
+                        <ul>
+                            <li><a href="#">行政院環境保護署資訊公開要點</a></li>
+                            <li><a href="#">預算及會計月報</a></li>
+                            <li><a href="#">性別平等專區</a></li>
+                            <li><a href="#">人權專區</a></li>
+                            <li><a href="#">環境統計資料庫</a></li>
+                            <li><a href="#">業務標準作業流程</a></li>
+                            <li><a href="#">行政院環保署Open Data資料集</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="#">法規專區</a>
+                        <ul>
+                            <li><a href="#">主管法規查詢系統</a></li>
+                            <li><a href="#">全國法規資料庫</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </section>
+    <!-- fatfooter End -->
+    <!-- footer Start-->
+    <footer>
+        <div class="container">
+            <a class="accesskey" href="#aZ" id="aZ" accesskey="Z" title="頁尾區">:::</a>
+            <div class="footer_logo">
+                <img src="images/logo.png" alt="" class="img-responsive">
+            </div>
+            <div class="footer_info">
+                <ul class="footer_link">
+                    <li><a href="javascript:;">隱私權政策</a></li>
+                    <li><a href="javascript:;">網站安全政策</a></li>
+                    <li><a href="javascript:;">政府網站資料開放宣告</a></li>
+                </ul>
+                <p class="Copyright"> Hyweb Technology Co., Ltd.© 2015 All Rights Reserved</p>
+                <p> 總公司：新竹縣竹北市台元一街8號5樓之6TEL：03-5601296 <br /> 台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966 <br /> 台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968 <br /> 高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606 </p>
+                <span class="update">更新日期:<em>2018/01/01</em></span>
+                <span class="counter">累計瀏覽人次:<em>46476653</em></span>
+            </div>
+            <div class="footer_icon">
+                <a target="_blank" href="javascript:;" title="另開視窗">
+                    <img src="images/basic/accessibility.jpg" alt="">
+                </a>
+                <a target="_blank" href="javascript:;" title="另開視窗">
+                    <img src="images/basic/egov.png" alt="">
+                </a>
             </div>
         </div>
-        <!-- fatfooter Start -->
-        <section class="fatfooter">
-            <div class="container">
-                <button type="button" name="收合" class="btn btn-fatfooter">收合</button>
-                <nav>
-                    <ul>
-                        <li><a href="#">關於本局</a>
-                            <ul>
-                                <li><a href="#">本局沿革</a></li>
-                                <li><a href="#">本局願景</a></li>
-                                <li><a href="#">組織介紹</a></li>
-                                <li><a href="#">本局願景</a></li>
-                                <li><a href="#">局處執掌</a></li>
-                                <li><a href="#">重大政策</a></li>
-                                <li><a href="#">施政重點</a></li>
-                                <li><a href="#">本局位置</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">訊息公告</a>
-                            <ul>
-                                <li><a href="#">本局公告</a></li>
-                                <li><a href="#">環保署公告</a></li>
-                                <li><a href="#">環境用藥公告</a></li>
-                                <li><a href="#">環保專案成果報告</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">業務專區</a>
-                            <ul>
-                                <li><a href="#">化學物質</a></li>
-                                <li><a href="#">毒性化學物質</a></li>
-                                <li><a href="#">危害性化學物質災害防救</a></li>
-                                <li><a href="#">環境用藥</a></li>
-                                <li><a href="#">石綿危害資訊</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">便民服務</a>
-                            <ul>
-                                <li><a href="#">線上服務</a></li>
-                                <li><a href="#">教育宣導</a></li>
-                                <li><a href="#">影音專區</a></li>
-                                <li><a href="#">下載專區</a></li>
-                                <li><a href="#">常見問答</a></li>
-                                <li><a href="#">相關連結</a></li>
-                                <li><a href="#">訂閱電子報</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">政府資訊公開</a>
-                            <ul>
-                                <li><a href="#">行政院環境保護署資訊公開要點</a></li>
-                                <li><a href="#">預算及會計月報</a></li>
-                                <li><a href="#">性別平等專區</a></li>
-                                <li><a href="#">人權專區</a></li>
-                                <li><a href="#">環境統計資料庫</a></li>
-                                <li><a href="#">業務標準作業流程</a></li>
-                                <li><a href="#">行政院環保署Open Data資料集</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="#">法規專區</a>
-                            <ul>
-                                <li><a href="#">主管法規查詢系統</a></li>
-                                <li><a href="#">全國法規資料庫</a></li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
-        </section>
-        <!-- fatfooter End -->
-        <!-- footer Start-->
-        <footer>
-            <div class="container">
-                <a class="accesskey" href="#aZ" id="aZ" accesskey="Z" title="頁尾區">:::</a>
-                <div class="footer_logo">
-                    <img src="images/logo.png" alt="" class="img-responsive">
-                </div>
-                <div class="footer_info">
-                    <ul class="footer_link">
-                        <li><a href="javascript:;">隱私權政策</a></li>
-                        <li><a href="javascript:;">網站安全政策</a></li>
-                        <li><a href="javascript:;">政府網站資料開放宣告</a></li>
-                    </ul>
-                    <p class="Copyright"> Hyweb Technology Co., Ltd.© 2015 All Rights Reserved</p>
-                    <p> 總公司：新竹縣竹北市台元一街8號5樓之6TEL：03-5601296 <br /> 台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966 <br /> 台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968 <br /> 高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606 </p>
-                    <span class="update">更新日期:<em>2018/01/01</em></span>
-                    <span class="counter">累計瀏覽人次:<em>46476653</em></span>
-                </div>
-                <div class="footer_icon">
-                    <a target="_blank" href="javascript:;" title="另開視窗">
-                        <img src="images/basic/accessibility.jpg" alt="">
-                    </a>
-                    <a target="_blank" href="javascript:;" title="另開視窗">
-                        <img src="images/basic/egov.png" alt="">
-                    </a>
-                </div>
-            </div>
-        </footer>
-        <!-- footer End -->
-    </div>
-    <a href="javascript:;" class="scrollToTop">回頁首</a>
-    <!-- JQ -->
-    <script src="js/jquery-3.5.1.min.js"></script>
-    <!-- 外掛 plugin js -->
-    <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
-    <script src="vendor/slick/slick.min.js "></script><!-- slick -->
-    <script src="vendor/slick/slick-lightbox.js "></script><!-- slick lightbox -->
-    <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
-    <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
-    <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
-    <!-- hyUI -->
-    <script src="js/hyui.js"></script>
-    <!-- 客製js -->
-    <script src="js/customize.js"></script>
+    </footer>
+    <!-- footer End -->
+</div>
+<a href="javascript:;" class="scrollToTop">回頁首</a>
+<!-- JQ -->
+<script src="js/jquery-3.5.1.min.js"></script>
+<!-- 外掛 plugin js -->
+<script src="vendor/jquery.easing.min.js"></script><!-- ease -->
+<script src="vendor/slick/slick.min.js "></script><!-- slick -->
+<script src="vendor/slick/slick-lightbox.js "></script><!-- slick lightbox -->
+<script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
+<script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
+<script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
+<!-- hyUI -->
+<script src="js/hyui.js"></script>
+<!-- 客製js -->
+<script src="js/customize.js"></script>
 </body>
