--- a/btn.htm
+++ b/btn.htm
@@ -457,11 +457,11 @@
 
 
                             <div class="btn_grp">
-                                <a class="btn btn-xl">特大按鈕</a>
-                                <a class="btn btn-lg">大按鈕</a>
-                                <a class="btn">按鈕</a>
-                                <a class="btn btn-sm">小按鈕</a>
-                                <a class="btn btn-xs">小小按鈕</a>
+                                <button class="btn btn-xl">特大按鈕</button>
+                                <button class="btn btn-lg">大按鈕</button>
+                                <button class="btn">按鈕</button>
+                                <button class="btn btn-sm">小按鈕</button>
+                                <button class="btn btn-xs">小小按鈕</button>
                             </div>
 
                         </form>
