20201123 增加圖片輪播畫面

--- a/index.htm
+++ b/index.htm
@@ -162,6 +162,11 @@
                         <td>Google Search頁面</td>
                         <td><a href="gs_template.htm"></a></td>
                     </tr>
+                     <tr>
+                        <td></td>
+                        <td>圖片輪播</td>
+                        <td><a href="slider.htm"></a></td>
+                    </tr>
                     <tr>
                         <td></td>
                         <td>404 網站錯誤</td>
