--- a/gs_template.htm
+++ b/gs_template.htm
@@ -235,7 +235,7 @@
     <!-- fatfooter Start -->
     <section class="fatfooter">
       <div class="container">
-        <button type="button" name="收合" class="btn btn-fatfooter">收合</button>
+        <button type="button" name="展開選單/OPEN" aria-label="導覽選單展開/收合" class="btn btn-fatfooter">收合</button>
         <nav>
           <ul>
             <li><a href="#">關於本局</a>
