--- a/slider.htm
+++ b/slider.htm
@@ -11,8 +11,8 @@
     <script src="js/respond.min.js"></script>
 <![endif]-->
     <!-- slick css-->
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
-    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" />
+    <!-- <link rel="stylesheet" type="text/css" href="vendor/slick/slick.css" />
+    <link rel="stylesheet" type="text/css" href="vendor/slick/slick-theme.css" /> -->
     <!-- hyUI css -->
     <link rel="stylesheet" href="css/hyui.css">
     <!-- favicon -->
@@ -210,13 +210,52 @@
                         </div>
                     </div>
                     <!-- 圖片輪播 end -->
+                    <!-- 廣告輪播   start -->
+                    <div class="adSlider">
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_01.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_02.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_03.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_04.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_05.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_06.jpg" class="contain">
+                            </a>
+                        </div>
+                        <div class="img-container">
+                            <a href="#" title="">
+                                <img data-lazy="images/demo/ad_07.jpg" class="cover">
+                            </a>
+                        </div>
+                    </div>
+                    <!-- 廣告輪播   end -->
                 </div>
             </div>
         </div>
         <!-- fatfooter Start -->
         <section class="fatfooter">
             <div class="container">
-                <button type="button" name="收合" class="btn btn-fatfooter">收合</button>
+                <button type="button" name="展開選單/OPEN" aria-label="導覽選單展開/收合" class="btn btn-fatfooter">收合</button>
                 <nav>
                     <ul>
                         <li><a href="#">關於本局</a>
@@ -316,11 +355,12 @@
     <script src="js/jquery-3.5.1.min.js"></script>
     <!-- 外掛 plugin js -->
     <script src="vendor/jquery.easing.min.js"></script><!-- ease -->
-    <script src="vendor/slick/slick.min.js "></script><!-- slick -->
-    <script src="vendor/slick/slick-lightbox.js "></script><!-- slick lightbox -->
     <script src="vendor/lazyload/lazyload.js"></script><!-- lazyload -->
     <script src="vendor/picturefill/picturefill.min.js" async></script><!-- picturefill -->
     <script src="vendor/scrolltable/jquery.scroltable.min.js"></script><!-- scrolltable -->
+    <!-- slick js-->
+    <script src="js/slick.min.js "></script><!-- slick -->
+    <script src="js/slick-lightbox.js "></script><!-- slick lightbox -->
     <!-- hyUI -->
     <script src="js/hyui.js"></script>
     <!-- 客製js -->
