20201222  pagination 分頁加上無障礙修改

--- a/lp_table_template.htm
+++ b/lp_table_template.htm
@@ -326,7 +326,7 @@
                     <div class="pagination">
                         <form action="">
                             <div class="form_inline">
-                                <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="">
+                                <div class="total"> 共<span>308</span>筆資料，第<span>1/18</span>頁，每頁顯示 <select name="" id="" aria-label="每頁顯示">
                                     <option value="">10</option>
                                     <option value="">20</option>
                                     <option value="">30</option>
