2021 新增無障礙aria

--- a/cp_photo_template.htm
+++ b/cp_photo_template.htm
@@ -29,7 +29,7 @@
             <div class="container">
                 <a class="accesskey" href="#aU" id="aU" accesskey="U" title="網站標題" tabindex="2">:::</a>
                 <!-- navigation Start -->
-                <nav class="navigation">
+                <nav class="navigation" role="navigation" aria-label="Site">
                     <!-- 新增div navlist -->
                     <div class="navlist">
                         <ul>
@@ -64,10 +64,10 @@
                     <a href="index.htm"><img src="images/logo.png" alt="網站標題" /></a>
                 </h1>
                 <!-- Search Start -->
-                <div class="search">
+                <div class="search" role="search">
                     <div class="form_grp">
                         <label for="mustSameAsId">搜尋</label>
-                        <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S">
+                        <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S" title="請輸入文字"  aria-label="搜尋網站內容">
                         <input name="" type="submit" value="查詢" class="btn btn-search" />
                     </div>
                     <div class="btn_grp">
@@ -86,7 +86,7 @@
                 <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
                 </noscript>
                 <!-- menu Start -->
-                <nav class="menu">
+                <nav class="menu" role="navigation" aria-label="About page">
                     <ul>
                         <li><a href="#">第一層選單</a>
                             <ul>
