--- a/00.htm
+++ b/00.htm
@@ -58,7 +58,6 @@
                             <li><a href="#">ENGLISH</a></li>
                         </ul>
                     </div>
-
                 </nav>
                 <!-- navigation End -->
                 <h1>
@@ -68,7 +67,7 @@
                 <div class="search" role="search">
                     <div class="form_grp">
                         <label for="mustSameAsId">搜尋</label>
-                        <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S" title="請輸入文字"  aria-label="搜尋網站內容">
+                        <input name="username" id="mustSameAsId" type="text" placeholder="請輸入文字" accesskey="S" title="請輸入文字" aria-label="搜尋網站內容">
                         <input name="" type="submit" value="查詢" class="btn btn-search" />
                     </div>
                     <div class="btn_grp">
@@ -84,9 +83,7 @@
                 </div>
                 <!-- Search End -->
                 <!-- noscript -->
-                <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+
-                    (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←)
-                    快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
+                <noscript> 您的瀏覽器不支援JavaScript語法，JavaScript語法並不影響內容的陳述。您可使用按鍵盤上的Ctrl鍵+ (+)鍵放大/(-)鍵縮小來改變字型大小；回到上一頁可使用瀏覽器提供的 Alt+左方向鍵(←) 快速鍵功能；列印可使用瀏覽器提供的(Ctrl+P)功能。您的瀏覽器，不支援script語法，若您的瀏覽器無法支援請點選此超連結 <a href="#">網站導覽</a>
                 </noscript>
                 <!-- menu Start -->
                 <nav class="menu" role="navigation" aria-label="About page">
@@ -1610,8 +1607,7 @@
                         <li><a href="javascript:;">政府網站資料開放宣告</a></li>
                     </ul>
                     <p class="Copyright"> Hyweb Technology Co., Ltd.© 2015 All Rights Reserved</p>
-                    <p> 總公司：新竹縣竹北市台元一街8號5樓之6TEL：03-5601296 <br /> 台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966 <br />
-                        台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968 <br /> 高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606 </p>
+                    <p> 總公司：新竹縣竹北市台元一街8號5樓之6TEL：03-5601296 <br /> 台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966 <br /> 台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968 <br /> 高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606 </p>
                     <span class="update">更新日期:<em>2018/01/01</em></span>
                     <span class="counter">累計瀏覽人次:<em>46476653</em></span>
                 </div>
