--- a/epaper_template.htm
+++ b/epaper_template.htm
@@ -31,10 +31,9 @@
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
                                     <td width="19" bgcolor="#21BAFF">&nbsp;</td>
-                                    <td width="187" height="86"><a href="#"><img src="images/logo.png" width="250"  border="0"/></a></td>
+                                    <td width="187" height="86"><a href="#"><img src="images/logo.png" width="250" border="0" /></a></td>
                                     <td>
-                                    <td width="120" height="86" align="center" bgcolor="#21BAFF" style="color:#fff; font-size:19px;"><strong>12月份<br />
-                                        2019</strong></td>
+                                    <td width="120" height="86" align="center" bgcolor="#21BAFF" style="color:#fff; font-size:19px;"><strong>12月份<br /> 2019</strong></td>
                                     <td width="18" bgcolor="#21BAFF">&nbsp;</td>
                                 </tr>
                             </table>
@@ -67,8 +66,7 @@
                         <td>
                             <table width="100%" border="0" cellspacing="0" cellpadding="0">
                                 <tr>
-                                    <td bgcolor="#21BAFF" width="19" valign="top">&nbsp;
-                                    </td>
+                                    <td bgcolor="#21BAFF" width="19" valign="top">&nbsp; </td>
                                     <td valign="top">
                                         <!--細框內 start-->
                                         <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#dfdfdf">
@@ -78,7 +76,7 @@
                                                         <tr>
                                                             <td width="774" align="center">
                                                                 <!-- 如果有需要的話 -->
-                                                                <!--photo start--><img src="https://assets.imgix.net/unsplash/mountains.jpg?w=774&h=250&fit=crop&auto=format%2Cenhance&usm=20" width="744"/>
+                                                                <!--photo start--><img src="https://assets.imgix.net/unsplash/mountains.jpg?w=774&h=250&fit=crop&auto=format%2Cenhance&usm=20" width="744" />
                                                                 <!--photo end-->
                                                             </td>
                                                         </tr>
@@ -228,12 +226,7 @@
                     </tr>
                     <tr>
                         <td align="center" bgcolor="#21BAFF" style="font-size:12px; ">
-                            <p style="padding-bottom:10px"><a href="#" style="color:#fbd10e;">著作權宣告</a> 機關單位 版權所有請尊重智慧財產權勿任意轉載違者必究
-                                <br /> 總公司：新竹縣竹北市台元一街8號5樓之6 TEL：03-5601296
-<br />台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966
-<br />台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968
-<br />高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606
-                            </p>
+                            <p style="padding-bottom:10px"><a href="#" style="color:#fbd10e;">著作權宣告</a> 機關單位 版權所有請尊重智慧財產權勿任意轉載違者必究 <br /> 總公司：新竹縣竹北市台元一街8號5樓之6 TEL：03-5601296 <br />台北分公司：台北市重慶南路二段51號5樓 TEL：02-2395-6966 <br />台中分公司：台中市西屯區臺灣大道三段658號6樓A1 TEL：04-2706-3968 <br />高雄分公司：高雄市新興區中正三路55號26樓之5 TEL：07-2223606 </p>
                         </td>
                     </tr>
                 </table>
