--- a/form.htm
+++ b/form.htm
@@ -176,8 +176,8 @@
                         </ul>
                     </div>
                     <section>
-                        <h3>一列式表單</h3>
                         <form action="">
+                            <h3>一列式表單</h3>
                             <div class="flex-form form_inline">
                                 <div class="form_grp">
                                     <label for="username">帳號:</label>
@@ -198,9 +198,7 @@
                                     <input name="" type="submit" value="送出" class="btn btn-submit" />
                                 </div>
                             </div>
-                        </form>
-                        <h3>格線式表單</h3>
-                        <form action="">
+                            <h3>格線式表單</h3>
                             <div class="flex-form form_grid">
                                 <div class="form_grp">
                                     <label for="username" class="form_title">帳號<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr></label>
@@ -226,11 +224,13 @@
                                     <label for="email" class="form_title">E-mail<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr></label>
                                     <div class="form_content">
                                         <div class="input-i">
-                                            <i class="i_mail"></i>
                                             <input name="email" type="email" id="email">
+                                            <i class="i_mail"></i>
                                         </div>
                                         <div class="notice">這是一般提醒訊息區塊</div>
-                                        <div class="notice_warning">這似乎不是一個正常的Email格式</div>
+                                        <div class="notice_warning">這似乎不是一個正常的Email格式
+                                            <a href="#" class="close"><img src="images/basic/icon_close.svg" alt=""></a>
+                                        </div>
                                     </div>
                                 </div>
                                 <div class="form_grp">
@@ -243,6 +243,7 @@
                                     <div class="form_title">起始日期(type="date")</div>
                                     <div class="form_content">
                                         <div class="datepick">
+                                            
                                             <input name="" type="date" value="" class="calendar" placeholder="開始日期">
                                         </div>
                                         <div class="datepick">
@@ -357,10 +358,8 @@
                                     <button class="btn btn-submit">送出</button>
                                 </div>
                             </div>
-                        </form>
-                        <!--  -->
-                        <h3>格線式表單--多欄</h3>
-                        <form action="">
+                            <!--  -->
+                            <h3>格線式表單--多欄</h3>
                             <div class="form_grid flex-form">
                                 <div class="form_grp">
                                     <label for="" class="form_title">form_col-6-6</label>
@@ -567,9 +566,7 @@
                                     </div>
                                 </div>
                             </div>
-                        </form>
-                        <h3>多層次表單</h3>
-                        <form action="">
+                            <h3>多層次表單</h3>
                             <div class="flex-form form_grid">
                                 <div class="form_grp">
                                     <div class="form_title">個人資料<abbr class="necessary" title="為必填(選)欄位,不能為空白。">*</abbr></div>
@@ -901,9 +898,7 @@
                                     <button class="btn btn-submit">送出</button>
                                 </div>
                             </div>
-                        </form>
-                        <h3>多層次表單-多欄</h3>
-                        <form action="">
+                            <h3>多層次表單-多欄</h3>
                             <div class="flex-form form_grid">
                                 <div class="form_grp">
                                     <label for="" class="form_title">第一層 Title</label>
@@ -1044,11 +1039,9 @@
                                     </div>
                                 </div>
                             </div>
-                        </form>
-                        <div class="flex-equal-2">
-                            <div class="Flex-set">
-                                <div class="col">
-                                    <form action="">
+                            <div class="flex-equal-2">
+                                <div class="Flex-set">
+                                    <div class="col">
                                         <h3>信用卡表單</h3>
                                         <div class="flex-form">
                                             <div class="form_grp">
@@ -1075,10 +1068,10 @@
                                                 <button class="btn btn-submit">送出</button>
                                             </div>
                                         </div>
-                                    </form>
+                                    </div>
                                 </div>
                             </div>
-                        </div>
+                        </form>
                     </section>
                 </div>
             </div>
